# minGPT

./: .gitignore  LICENSE  README.md  demo.ipynb  example_tokenization.py  generate.ipynb  generate.py  generate_en.py  generate_es.py  generate_fr.py  generate_it.py  hotzilla.avif  output_log.txt  pyproject.toml  run_all_scrips.sh  run_scrip.sh  setup.py  test_huggingface_import.py
Results/Messi-Ronaldo Example/: output_medium.txt  output_xl.txt
Results/Ronaldo-Messi Example/: output_medium.txt  output_xl.txt
mingpt/: model.py  trainer.py
projects/: readme.md
projects/NY_bicycles/: bicycles_model.py  readme.md
projects/adder/: adder.py
projects/chargpt/: chargpt.py
projects/demand-forecasting-simulated/: demand-forecasting-simulated-lowhigh_model.py  demand-forecasting-simulated_model.py  readme.md
projects/house_prices/: construct_dataset.py  house_prices_model.py  readme.md
projects/multi-task/: multi-task_model.py  readme.md
projects/multi-task-simulated/: multi-task-simulated_model.py
projects/spaceship_titanic/: readme.md  spaceship_titanic_model.py
projects/store_sales/: readme.md  store_sales_model.py
tabgpt/: col_embed.py  data_loader.py  model.py  trainer.py  utils.py
tabgpt/data/house_prices/: data_setup.py
tabgpt/data/ny_bicycles/: data_setup.py
tabgpt/data/simulated_demand/: data_setup.py
tabgpt/data/store_sales/: data_setup.py
tests/: test_huggingface_import.py
tinygpt/: bpe.py  model.py  tinyloader.py  tinyutils.py  trainer.py  utils.py
